--- a/LoadNews/jq_jsonp_wf_lazyout.html
+++ b/LoadNews/jq_jsonp_wf_lazyout.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>新闻浏览</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="lazyload.js"></script>
 	<script src="waterfull.js"></script>
 	<style>
